Fix navbar on mobile view

--- a/app/assets/stylesheets/web/common/NewNavBar.scss
+++ b/app/assets/stylesheets/web/common/NewNavBar.scss
@@ -27,7 +27,7 @@
     margin-right: 1rem;
   }
 
-  .navbar-toggle {
+  .navbar-toggler {
     background-color: #f4f8f9;
     margin: 0;
     border: 0;
